--- a/Blog Website/assets/css/writeblog.css
+++ b/Blog Website/assets/css/writeblog.css
@@ -40,6 +40,13 @@ section.main-container {
     justify-content: space-evenly;
     align-items: center;
     font-size: 18px;
+    cursor: pointer;
+    user-select: none;
+    transition: .3s ease;
+}
+.new-post-container:hover{
+    background-color: #f0f0f0;
+    transform: scale(1.05);
 }
 .title-container {
     display: flex;
@@ -127,6 +134,14 @@ img#write-blog-image {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 100px;
+}
+.icon-collection .icons:hover{
+    cursor: pointer;
+    transform: scale(1.06);
+}
+.icon-container:hover{
+    cursor: pointer;
+    transform: scale(1.06);
 }
 @media (max-width: 937px){
     #cover-image{
